# generativeai-demos

./: README.md  async-test.py  asyncio-functions-demo2.ipynb  demo1.py  demo3.py  main.py  pyproject.toml  requirements-faiss.txt  requirements.txt  utils-demo1.txt
AutogenTutorial/: function-calling.py  requirements.txt
AutogenTutorial/connections/: anthropic-connection.py  autogen-quickstart.py  azure-openai-connection.py  openai-alike-connection.py  semantic-kernel-connection.py
advanced-demos/: 1_test_server.py  2_async_server.py  book.db  demo3.py  index.html  movie.db
advanced-demos/public/: ctos2.HEIC  ctos2.HEIC:Zone.Identifier
asyncio/: async-test.py  asyncio.drawio  asyncio.xml  demo1.py  demo3.py
fastapi_docker/: main.py  model_starter.py
genai-python/: poo.ipynb
genai-python/algorithms/: count_binary_search_trees.py  firstsearch_binary_search.py  generate_binary_search_trees.py  leetcode_tests.ipynb  test_bst.py  validate_binary_search_trees.py  wordsearch_breadth_first_search.py
genai-python/python/data_structures/: ft_analyze.ipynb
genai-python/python/oop/: oop_exercise1.py  (+1 more)
python/oop/: oop_exercise1.py
rag/: embedding_vectorsearch_kaggle.ipynb  embeddings_similarity scores_kaggle.ipynb  rag_google.ipynb  rag_microsoft.ipynb  tf_tokenization_google.ipynb
rag/agentic_rag/: agent-memorytool-azs-poc.ipynb  app.py  chainlit.md  fake_patient_data.ipynb  memory_app.py  multi-step-agentic-rag.ipynb  requirements.txt
rag/bootcamp/: advance_rag_app.py  agent-quickstart.ipynb  requirements.txt  simple_rag.ipynb  simple_rag_system.py
(+9 files in other folders)
